feat: finish Etch-a-Sketch MVP with color picker, reset, and grid drawing

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <div class="controls-container">
         <h2 class="controls-title">Controls</h2>
         <label for="color">
-          <input name="color" id="color" type="color" value="#A9A9A9" />
+          <input name="color" id="color" type="color" value="#f03c7b" />
           <p class="color-text">Pick a color</p>
         </label>
         <button id="reset">Reset your art work</button>
       </div>
       <!-- End of controls for swatches -->
 
-      <div id="grid-container">Grids will go here</div>
+      <div id="grid-container"></div>
     </main>
     <!-- end of main section and beginning of footer -->
 
@@ -33,5 +33,7 @@
       </div>
       <div class="left-footer">Remember: Ctrl+Z doesn’t work here 😉</div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
